Fixed some typos and suggestions by sonarlint