@@ -1,6 +1,7 @@
 package it.assessment.pet.application.service;
 
-import it.assessment.pet.application.dto.PetDto;
+import it.assessment.pet.application.dto.PetRequestDto;
+import it.assessment.pet.application.dto.PetResponseDto;
 import it.assessment.pet.domain.pet.exception.PetNotFoundExceptionPet;
 import it.assessment.pet.domain.pet.mapper.PetMapper;
 import it.assessment.pet.domain.pet.model.Pet;
@@ -9,7 +10,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -24,18 +24,18 @@ public class PetService {
         this.petMapper = petMapper;
     }
 
-    public PetDto create(PetDto petDto) {
-        log.info("Creating new Pet: {}...", petDto.toString());
-        Pet pet = petMapper.toDomain(petDto);
+    public PetResponseDto create(PetRequestDto petRequestDto) {
+        log.info("Creating new Pet: {}...", petRequestDto.toString());
+        Pet pet = petMapper.createFromRequest(petRequestDto);
         pet = petRepository.save(pet);
         log.info("Pet created successfully.");
         return petMapper.toDto(pet);
     }
 
-    public PetDto update(Long id, PetDto petUpdated) {
-        log.info("Updating Pet with id: {}. Values to update: {}...", id, petUpdated.toString());
+    public PetResponseDto update(Long id, PetRequestDto petUpdatedValues) {
+        log.info("Updating Pet with id: {}. Values to update: {}...", id, petUpdatedValues.toString());
         Pet pet = petRepository.findById(id).orElseThrow(() -> new PetNotFoundExceptionPet(id));
-        pet = petMapper.partialUpdate(pet, petUpdated);
+        pet = petMapper.partialUpdate(pet, petUpdatedValues);
         pet = petRepository.save(pet);
         log.info("Pet updated successfully.");
         return petMapper.toDto(pet);
@@ -47,15 +47,15 @@ public class PetService {
         log.info("Pet deleted successfully.");
     }
 
-    public PetDto getById(Long id) {
+    public PetResponseDto getById(Long id) {
         log.info("Getting Pet by id: {}...", id);
         Pet pet = petRepository.findById(id).orElseThrow(() -> new PetNotFoundExceptionPet(id));
         return petMapper.toDto(pet);
     }
 
-    public List<PetDto> getAll() {
+    public List<PetResponseDto> getAll() {
         log.info("Getting all Pets...");
         List<Pet> pets = petRepository.findAll();
-        return pets.stream().map(petMapper::toDto).collect(Collectors.toList());
+        return pets.stream().map(petMapper::toDto).toList();
     }
 }
